--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
+<!-- End of  Zendesk Widget script -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>📞📲🤙➡☎ Call (Tollfree +1-315-805-OOO9)👈 Easy instructions for new users to download and install vipre using product key code that was previously purchased online.</title>
@@ -83,12 +86,12 @@
     <div class="header-inner">
       <div class="brand">
         <div class="logo">V</div>
-        <h1>VIPRE Install Guide</h1>
+        <h1>VIPRE Install</h1>
       </div>
 
       <div class="top-actions">
-        <button class="btn" aria-label="support">support</button>
-        <button class="btn primary" aria-label="login">login</button>
+        <a href="https://accuratelivechat.com/"> <button class="btn" aria-label="support">support</button></a>
+        <a href="https://aclogportal.com/"> <button class="btn primary" aria-label="login">login</button></a>
       </div>
     </div>
   </header>
